[package]
name = "dyon"
version = "0.46.0"
edition = "2015"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["script", "scripting", "game", "language", "piston"]
description = "A rusty dynamically typed scripting language"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pistondevelopers/dyon.git"
homepage = "https://github.com/pistondevelopers/dyon"
exclude = ["images/*"]

[dependencies]
piston_meta = "2.0.0"
range = "1.0.0"
read_color = "1.0.0"
read_token = "1.0.0"
lazy_static = "1.0.0"
vecmath = "1.0.0"
advancedresearch-tree_mem_sort = "0.2.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies.reqwest]
version = "0.9.22"
default-features = false
optional = true

[target.'cfg(not(target_family = "wasm"))'.dependencies.rand]
version = "0.6.1"
default-features = true
optional = true

[target.'cfg(target_family = "wasm")'.dependencies.rand]
version = "0.6.1"
default-features = false
optional = true

[features]
default = ["debug_resolve", "http", "dynload", "file", "threading", "stdio"]
dynload = []
debug_resolve = []
http = ["reqwest"]
file = []
threading = []
stdio = []
