[package]
name = "dyon"
version = "0.51.0"
edition = "2024"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["script", "scripting", "game", "language", "piston"]
description = "A rusty dynamically typed scripting language"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/dyon.git"
homepage = "https://github.com/pistondevelopers/dyon"
exclude = ["images/*", "data/*", "interactive/*", "meta/*", "source/*",
           "string/*", "tests/*"]

[dependencies]
piston_meta = "2.0.0"
range = "1.0.0"
read_color = "1.0.0"
read_token = "1.0.0"
lazy_static = "1.0.0"
vecmath = "1.0.0"
advancedresearch-tree_mem_sort = "0.2.0"
tokio = {version = "1.34.0", features = ["full"], optional = true}

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "dyon_benchmark"
harness = false

[target.'cfg(not(target_family = "wasm"))'.dependencies.reqwest]
version = "0.9.22"
default-features = false
optional = true

[target.'cfg(not(target_family = "wasm"))'.dependencies.rand]
version = "0.9.2"
default-features = true
optional = true

[features]
default = [
  "debug_lookup", "dynload", "file", "http", "stdio", "threading", "rand"
]
async = ["tokio"]
debug_lookup = []
dynload = []
file = []
http = ["reqwest"]
stdio = []
threading = []
