[package]
name = "piston-dyon_interactive"
version = "0.30.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "A library for interactive coding with the Piston game engine"
keywords = ["script", "scripting", "game", "language", "piston"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pistondevelopers/dyon.git"
homepage = "https://github.com/pistondevelopers/dyon/interactive"

[lib]
name = "dyon_interactive"

[dependencies.dyon]
version = "0.42.0"
path = ".."

[dependencies]
piston = "0.42.0"
current = "0.1.2"
piston-texture = "0.6.0"
image = "0.21.0"

[dependencies.piston2d-graphics]
version = "0.30.0"
features = ["glyph_cache_rusttype"]

[dev-dependencies]
pistoncore-sdl2_window = "0.55.0"
piston2d-opengl_graphics = "0.59.0"
piston-music = "0.25.0"
