[package]
name = "piston-dyon_interactive"
version = "0.49.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>","TheSlam <32799244+salmmanfred@users.noreply.github.com>"]
description = "A library for interactive coding with the Piston game engine"
keywords = ["script", "scripting", "game", "language", "piston"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pistondevelopers/dyon.git"
homepage = "https://github.com/pistondevelopers/dyon/interactive"
edition = "2024"
exclude = ["images/*", "source/*"]

[lib]
name = "dyon_interactive"

[dependencies.dyon]
version = "0.50.2"
path = ".."

[dependencies]
piston = "1.0.0"
current = "1.0.1"
piston-texture = "0.9.0"
image = "0.25.9"

[dependencies.piston2d-graphics]
version = "0.45.0"
features = ["glyph_cache_rusttype"]

[dev-dependencies]
pistoncore-sdl2_window = "0.71.0"
piston2d-opengl_graphics = "0.89.0"
kira = "0.11.0"
